# ogen

./: .editorconfig  .gitignore  .ocp-indent  .travis.yml  Dockerfile  Makefile  README.md  docker-compose.yml  example  ogen.opam
.travis/: test
lib/: .merlin  cli.ml  cli.mli  dune  dune_project.ml  dune_project.mli  filesystem.ml  filesystem.mli  makefile.ml  makefile.mli  opam_package.ml  opam_package.mli  project.ml  project.mli
src/: cli.ml  command.mli  file.ml  file.mli  global_options.mil  global_options.ml  jbuild  jbuilder_library.ml  jbuilder_library.mli  jbuilder_library_config.ml  jbuilder_library_config.mli  jbuilder_version_config.ml  jbuilder_version_config.mli  lib_command.ml  library.ml  library.mli  library_project.ml  library_project.mli  module_command.ml  module_file.ml  module_file.mli  project.ml  version.ml
src/cli/: .merlin  command.ml  common_options.ml  common_options.mli  default.ml  default.mli  dune  jbuild  library.ml  module.ml  opam.ml
src/dune/: .merlin  config.ml  config.mli  dune  library.ml  library.mli  version.ml
src/filesystem/: .merlin  directory.ml  directory.mli  dune  file.ml  file.mli  jbuild
src/jbuilder/: .merlin  config.ml  config.mli  dune  jbuild  library.ml  library.mli  version.ml  version.mli
src/opam_package/: .merlin  config.ml  config.mli  dune
src/project/: .merlin  dune  (+14 more)
templates/: default.mk  opam.mustache
test/: .merlin  dune  file_test.ml  jbuild  jbuilder_library_config_test.ml  library_test.ml  project_test.ml  test.ml  test_runner.ml
tests/: .merlin  file_test.ml  jbuild  jbuilder_library_test.ml  test.ml
