opam-version: "1.2"
maintainer: "holy.shared.design@gmail.com"
authors: ["Noritaka Horio"]

homepage: "https://github.com/holyshared/ogen"
bug-reports: "https://github.com/holyshared/ogen/issues"
dev-repo: "https://github.com/holyshared/ogen.git"

build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]

build-test: [
  ["jbuilder" "runtest" "-p" name]
]

depends: [
  "jbuilder" {build}
]
