opam-version: "1.2"
name: "ogen"
version: "0.2.0"
maintainer: "holy.shared.design@gmail.com"
authors: ["Noritaka Horio"]
license: "MIT"
homepage: "https://github.com/holyshared/ogen"
bug-reports: "https://github.com/holyshared/ogen/issues"
dev-repo: "https://github.com/holyshared/ogen.git"

build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]

build-test: [
  ["jbuilder" "runtest" "-p" name]
]

depends: [
  "jbuilder" {build}
  "sexplib" {>= "0.10.0"}
  "sexp_pretty" {>= "0.10.0"}
]
available: [ ocaml-version >= "4.06.0" ]
