opam-version: "2.0"
name: "ogen"
version: "0.3.1"
maintainer: "holy.shared.design@gmail.com"
authors: ["Noritaka Horio"]
license: "MIT"
homepage: "https://github.com/holyshared/ogen"
bug-reports: "https://github.com/holyshared/ogen/issues"
dev-repo: "https://github.com/holyshared/ogen.git"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

build-test: [
  ["dune" "runtest" "-p" name]
]

depends: [
  "dune" {build}
  "sexplib" {>= "0.10.0"}
  "sexp_pretty" {>= "0.10.0"}
  "mustache" {>= "3.0.0"}
]

available: [ ocaml-version >= "4.06.0" ]
